chore: fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,8 +80,8 @@ h3 {
   margin: 0;
   font-size: 25px;
   line-height: 3.75;
-  margin-top: 40px;
-  /* padding-top: 50px; */
+  margin-top: 20px;
+  padding-top: 50px;
   font-family: "Montserrat", sans-serif;
 }
 
